--- a/index.html
+++ b/index.html
@@ -4,95 +4,114 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Website</title>
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <section>
       <nav>
-        <img src="./HTML Practise Assets/FES.svg" alt="" />
+        <img src="./HTML Practise Assets/FES.svg" class="logo" alt="" />
         <ul>
           <li><a href="#about">About</a></li>
           <li><a href="#discord">Discord</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
+
       <header>
-        <div>
-          <h1>Best place to learn frontend</h1>
-          <p>
-            Go from being an absolute beginner to pro with a simplified process
-          </p>
-          <button>Start here</button>
+        <div class="row">
+          <div class="home__description">
+            <h1>Best place to learn frontend</h1>
+            <p class="subheader">
+              Go from being an absolute beginner to pro with a simplified
+              process
+            </p>
+            <button class="home__description--button">Start here</button>
+          </div>
+          <figure class="about__img--wrapper">
+            <img
+              src="./HTML Practise Assets/laptop.png"
+              alt="Home page image"
+            />
+          </figure>
         </div>
-        <figure>
-          <img src="./HTML Practise Assets/laptop.png" alt="Home page image" />
-        </figure>
       </header>
     </section>
 
     <main>
       <section id="about">
         <h2>About</h2>
-        <div>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed,
-            mollitia debitis! Labore laborum earum vel sit quod amet cumque
-            expedita voluptatem autem, perferendis quia id qui optio accusamus
-            veniam. Aliquid!
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
-            labore impedit, laborum magnam debitis rem reiciendis doloribus quod
-            libero eligendi!
-          </p>
+        <div class="row">
+          <div class="section__description">
+            <div class="section__description--wrapper">
+              <p class="section__description--para">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed,
+                mollitia debitis! Labore laborum earum vel sit quod amet cumque
+                expedita voluptatem autem, perferendis quia id qui optio
+                accusamus veniam. Aliquid!
+              </p>
+              <p class="section__description--para">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
+                labore impedit, laborum magnam debitis rem reiciendis doloribus
+                quod libero eligendi!
+              </p>
+            </div>
+            <figure class="about__img--wrapper">
+              <img src="./HTML Practise Assets/about.jpg" alt="" />
+            </figure>
+          </div>
         </div>
-        <figure>
-          <img src="./HTML Practise Assets/about.jpg" alt="" />
-        </figure>
       </section>
 
       <section id="discord">
         <h2>Discord</h2>
-        <figure>
-          <img src="./HTML Practise Assets/discord.png" alt="Discord" />
-        </figure>
-        <div>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus
-            velit fugiat eveniet similique necessitatibus error incidunt,
-            aspernatur, rem deserunt adipisci saepe voluptatum, ex numquam unde?
-            Optio, repellendus. Eveniet, incidunt aut!
-          </p>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere
-            odio aliquam similique qui saepe commodi, quibusdam voluptatem
-            soluta architecto magni cumque vero maxime quis tempora dolores
-            itaque nulla perferendis odit?
-          </p>
+        <div class="row">
+          <div class="section__description">
+            <figure class="about__img--wrapper">
+              <img src="./HTML Practise Assets/discord.png" alt="Discord" />
+            </figure>
+            <div class="section__description--wrapper">
+              <p class="section__description--para">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Doloribus velit fugiat eveniet similique necessitatibus error
+                incidunt, aspernatur, rem deserunt adipisci saepe voluptatum, ex
+                numquam unde? Optio, repellendus. Eveniet, incidunt aut!
+              </p>
+              <p class="section__description--para">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere
+                odio aliquam similique qui saepe commodi, quibusdam voluptatem
+                soluta architecto magni cumque vero maxime quis tempora dolores
+                itaque nulla perferendis odit?
+              </p>
+            </div>
+          </div>
         </div>
       </section>
 
       <section id="contact">
         <h2>Contact</h2>
         <form action="">
-            <label for="">Email</label>
-            <input type="text" placeholder="jane@example.com">
-            <textarea type="text" placeholder=""></textarea>
-            <button>Start here</button>
+          <label for="">Email</label>
+          <input type="email" placeholder="jane@example.com" />
+          <label for="">Message</label>
+          <textarea
+            type="text"
+            placeholder="Cool website, let's get connected!"
+          ></textarea>
+          <button>Contact Us</button>
         </form>
       </section>
     </main>
 
-<footer>
-    <div>
-        <a href="#about">About</a>
-        <a href="#discord">Discord</a>
-        <a href="#contact">Contact</a>
-        <a href="#courses">Courses</a>
-    </div>
-    <p>Copyright Frontend Simplified
-    </p>
-</footer>
-
+    <footer>
+      <img class="footer__logo" src="./HTML Practise Assets/FES.svg" alt="" />
+      <div class="footer__links">
+        <a class="footer__link" href="#about">About</a>
+        <a class="footer__link" href="#discord">Discord</a>
+        <a class="footer__link" href="#contact">Contact</a>
+        <a class="footer__link" href="#courses">Courses</a>
+      </div>
+      <p>Copyright Frontend Simplified</p>
+    </footer>
   </body>
 </html>
